
syntax = "proto3";

package grassAmount_app_package;

service grassAmount {
    rpc get_grassAmount (msg) returns (status) {}
  
}

message msg {

    string categoryId = 1 ;
    string serviceId = 2 ;
    string productId = 3 ; 
}

message status {
    string status = 1;
    
}

