
syntax = "proto3";

package grossAmount_app_package;

service grossAmount {
    rpc getGrossAmount (msg) returns (amount) {}
  
}

message msg {

    string categoryId = 1 ;
    string serviceId = 2 ;
    string productId = 3 ; 
}

message amount {
    string amount = 1;
    
}

